# wasm_plugin

./: .gitignore  LICENSE.md  README.md
host_api/: host_api.h  host_api_cb.h  host_api_cmd.h  host_api_dref.h  host_api_gfx.h  host_api_log.h  host_api_nvg_proxy.h  readme.md
wasm_plugin_basic/: CMakeLists.txt  build_cmake.sh  wasm_plugin_basic.cpp  wasm_plugin_basic.h  wasm_plugin_ext_cbfs.h  wasm_plugin_ext_cmd.h  wasm_plugin_ext_dref.h  wasm_plugin_ext_vfs.h
wasm_plugin_nvg/: CMakeLists.txt  nanovg.c  nanovg.h  wasm_plugin_ext_cbfs.h  wasm_plugin_nvg.cpp
